@@ -29,5 +29,6 @@ setuptools.setup(
         'scipy',
         'sklearn',
         'pandas',
+        'ray',
     ],
 )
